Introduce USES= pkgconfig to replace USE_PKGCONFIG
It can take 3 arguments:
build (default,implicit) to add pkgconf into BUILD_DEPENDS
run to add pkgconf into RUN_DEPENDS
both to add pkgconf into both RUN and BUILD DEPENDS

This deprecates USE_PKGCONFIG, please convert your ports.
USE_PKGCONFIG will be removed as soon as it is no more used in
the ports tree


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316283 35697150-7ecd-e111-bb59-0022644237b5

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,18 @@ in the release notes and/or placed into UPDATING.
 
 All ports committers are allowed to commit to this file.
 
+20130323:
+AUTHOR: bapt@FreeBSD.org
+
+  * New USES macro to handle support for pkgconf (pkg-config) dependency:
+
+    USES= pkgconfig[:build] will add pkgconf into BUILD_DEPENDS
+    USES= pkgconfig:run will add pkgconf into RUN_DEPENDS
+    USES= pkgconfig:both will add pkgconf into both RUN and BUILD DEPENDS
+
+    It deprecates USE_PKGCONFIG which will be removed as soon as it is not
+    used anymore
+
 20130320:
 AUTHOR: jgh@FreeBSD.org
 
