- Add WITH_CCACHE_BUILD support during 'configure' phase - Add CCACHE_DIR   The MAKE_ENV/CONFIGURE_ENV+= method of adding CCACHE_DIR   in /etc/make.conf does not work for many ports since they   overwrite using = instead of appending with +=. By adding   CCACHE_DIR into the ENV variables after reading in the port   the directory is properly set in the environment. Without   this, the ccache support would sometimes work but incorrectly   not respect the set CCACHE_DIR, potentially using 2 caches.
With hat:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316289 35697150-7ecd-e111-bb59-0022644237b5

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,15 @@ in the release notes and/or placed into UPDATING.
 
 All ports committers are allowed to commit to this file.
 
+20130422:
+AUTHOR: bdrewery@FreeBSD.org
+
+  * The entry for 20120830 to change CCACHE_DIR was not fully supported
+    by all ports. There is now a CCACHE_DIR variable that can be used
+    in /etc/make.conf for more complete coverage:
+
+    CCACHE_DIR=/var/cache/ccache
+
 20130323:
 AUTHOR: bapt@FreeBSD.org
 
