Introduces USES= gettext to replace USE_GETTEXT
  It can take 3 arguments:
  build to add gettext into both RUN and BUILD DEPENDS
  run to add gettext into RUN_DEPENDS
  lib (default,implicit) to add gettext into LIB_DEPENDS

  This deprecates USE_GETTEXT. Please convert your ports.
  USE_GETTEXT will be removed as soon as it is no longer used in
  the ports tree

Approved by:	portmgr (bapt)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316316 35697150-7ecd-e111-bb59-0022644237b5

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,19 @@ in the release notes and/or placed into UPDATING.
 
 All ports committers are allowed to commit to this file.
 
+20130423:
+AUTHOR: jgh@FreeBSD.org
+
+  * New USES macro to handle support for gettext dependency:
+
+    USES= gettext:build will add gettext into BUILD_DEPENDS
+    USES= gettext:run will add gettext into RUN_DEPENDS
+    USES= gettext:lib will add gettext into LIB_DEPENDS
+
+    It deprecates USE_GETTEXT which will be removed as soon as it is not
+    used anymore
+
+
 20130422:
 AUTHOR: bdrewery@FreeBSD.org
 
