Remove USE_CDRTOOLS from bsd.port.mk
This macros has been useless since cdrtools-cjk port has gone.
This macros also lead to badly handled dependencies assuming that the dependency
on cdrtools was most BUILD and RUN dependency. While most of the time it is
simply a RUN dependency and sometime a build one.

While here:
- Trim some headers
- Convert some ports to optionsng
- Convert some ports to USES= gettext


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316600 35697150-7ecd-e111-bb59-0022644237b5

--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@ All ports committers are allowed to commit to this file.
 20130425:
 AUTHOR: bapt@FreeBSD.org
 
+  * USE_CDRTOOLS is no longer recognized
   * USE_FREETYPE is no longer recognized
 
 20130423:
